--- a/style.css
+++ b/style.css
@@ -1,77 +1,339 @@
 body {
     direction: rtl;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #5c5a57 ;
 }
+
+.containerAllPage {
+    width: 90%;
+    border: 1px solid gray;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+h6 {
+    /* text-align: center; */
+    color:blue;
+}
+
+.link {
+    font-size: 30px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    border: 1px solid gray;
+    background-color: crimson;
+    color: white;
+}
+
+
 
 h1 {
     text-align: center;
     padding: 55px;
+    color: #5c5a57 ;
 }
 
-/* .container {
-    width:90%;
-    background-color: bisque;
+.bo {  
+    border: 2px solid black;
+    margin: 20px;
+    background-color: antiquewhite;
+}
+
+.but {
+    background-color: limegreen;
+    display: block;
+    margin: 10px auto;
+}
+
+.ba {
+    text-align: center;
+}
+
+.pri {
+    text-align: center;
+    border: 1px solid black;
+}
+
+.buy {
+    font-size:20px;
+    border-radius: 8px;
+    padding: 5px;
+    display: block;
     margin: auto;
-} */
+    margin-bottom: 5px;
+    background-color: limegreen;
+}
+
 
 #main {
-    display: flex;
-    justify-content: space-between;
+    background-color: #a8dadc;
+    /* width: 80%; */
+    border: 1px solid gray;
+    margin: auto;
+}
+
+#artfish1 {
+    height: 150px;
+    float: left;
+    padding-left: 300px;
+}
+
+#artfish2 {
+    height: 150px;
+    float: right;
+    padding-right: 300px;
+    margin-top: 100px;
+}
+
+#coral {
+    height: 280px;
+    margin-right: 200px;
 }
 
 #products {
     display: flex;
-}
-
-
-
-div{
-    display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-   
+    justify-content: center;
+    border: 1px solid gray;
 }
 
-container {
-}
-/* .box {
-    height: 20%;
-    width:20%;
+#cart, #rcpro {
     border: 1px solid black;
-    background-color: darkgrey;
-    flex: 1;
-    flex-wrap: wrap;
-    justify-items: center;
-    margin: 70px;
-    */
-/* }
-
-.img-box {
-    width: 150px;
-    height:150;
-    background-color: aqua;
+    width: 200px;
     margin: auto;
 }
 
-.fishPic {
-    height: 150px;
-    width: 160px;
+ p {
+    font-size: 20px;
+    text-align: center;
+ }
+ 
+
+#itemDiv {
+    border: 2px solid black;
 }
 
-button {
+
+.cartAndTotal {
+    font-size: 16px;
+    position: absolute;
+    position: fixed;
+    margin-right: 5px;
+    background-color: aliceblue;
+    border: 1px solid gray;
+    width: 200px;
+}
+
+.rmv-btn {
     display: block;
-    padding: 10px;
-    background-color: #38b000;
-    margin:auto;
+    margin:5px auto;
+    
+}
+
+#total {
+    width: 200px;
+    margin: auto;
+}
+
+.reciept {
+    position: fixed;
+    background-color: rgba(0,0,0,0.5);
+    inset: 0;            
+    z-index: 2;
+    display: none;
+}
+
+.recieptBox {
+    position: fixed;
+    text-align: center;
+    background-color: antiquewhite;
+    inset: 80px;            
+    z-index: 2;
+}
+
+/* display non to button inside reciept */
+.reciept .buy, .reciept .rmv-btn {     
+    display: none;
+}
+
+.customerForm {
+    border: 1px solid gray;
+    width: 70%;
+    margin: auto;
+}
+
+
+
+/* STORAGE */
+#productsTable {
+    border: 1px solid gray;
+    margin: auto;
+}
+
+#storageAdd {
+    border: 1px solid gray;
+    background-color:bisque;
+}
+
+td {
+    border: 1px solid gray;
+    padding: 30px;
+    margin: auto;
+}
+
+#homeLink {
+    font-size: 30px;
+    text-decoration: none;
+    border: 1px solid gray;
+    display: block;
+    text-align: center;
+}
+
+.storageOrders {
+    border: 1px solid gray;
+    width: 600px;
+    margin: auto;
+}
+
+.orders {
+    display: block;
+    font-size: 30px;
+    padding: 7px;
+    margin:12px;
+    margin-right: 20px;
+}
+
+#addRemove {
+    background-color: darkgrey;
+    color: white;
+    text-align: center;
+}
+
+#addProduct {
+    margin: auto;
+}
+
+#addProduct {
+    background-color: limegreen;
     border-radius: 8px;
-    color: aliceblue;
-} */
-
-#cart {
-    border: 1px solid black;
+    color:white;
 }
 
-p {
-    font-size: 50px;
+#removeProduct {
+    background-color: red;
+    border-radius: 8px;
+    color:white;
 }
 
+#verifyProductButton {
+    background-color: lightsalmon;
+    border-radius: 8px;
+    color:white;
+}
+
+#updateProductButton {
+    background-color:orange;
+    border-radius: 8px;
+    color:white;
+}
+
+.editProduct {
+    border: 1px solid gray;
+    width: 600px;
+    margin: auto;
+    margin-top: 30px;
+}
+
+#updateTitle {
+    background-color: darkorange;
+    color: white;
+    text-align: center;
+}
+
+#welcome {
+    text-align: center;
+}
+
+#discountTitle {
+    border: 1px solid gray;
+    width: 350px;
+    text-align: center;
+    background-color: mediumaquamarine;
+    color: white;
+    margin: auto;
+}
+
+/* MEDIA MIN MAX */
+
+@media(max-width: 400px) {
+   #products {
+    padding-top: 20px;
+   }
+
+   .cartAndTotal {
+    position: static;
+    position: fixed none;
+   }
+
+   #main {
+    height: 100px;
+    margin-top: 50px;
+   }
+
+   #coral {
+    display: none;
+   }
+
+   #artfish1 {
+    display: none;
+   }
+
+   #artfish2 {
+    display: none;
+   }
+}
+
+
+@media(min-width: 401px){
+    #coral {
+        display: none;
+    }
+
+    #artfish2 {
+        display: none;
+    }
+
+    .cartAndTotal {
+        display: block;
+         position: static;
+        position: fixed none;
+       }
+}
+
+@media(min-width: 640px) {
+   
+    body {
+        background-image: url('images/artfish2.png');
+        background-repeat: no-repeat;
+        background-size: 300px;
+    }
+
+    #artfish1 {
+        display: none;
+    }
+}
+
+@media(min-width: 800px) {
+     #main {
+        background-image: url('images/artfish1.png');
+        background-repeat: no-repeat;
+        background-size: 200px;
+    }
+    
+}
+
+
+
+ 
